<resources>
    <string name="app_name">Funny Toeic</string>
    <string name="label_store">Store</string>
    <string name="label_vocabularies">Vocabs</string>
    <string name="label_current_level">Current Level</string>
    <string name="label_play">Click to Play !</string>
    <string name="label_today_vocabularies">Today</string>
    <string name="label_show_learned_words">Show learned words</string>
    <string name="label_show_all_words">Show all words</string>
    <string name="label_next">Next</string>
    <string name="label_current_learned">Learned: %d/%d</string>
    <string name="label_current_learned_default">Learned 0/0</string>
</resources>
